--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "author": "미히team",
   "license": "ISC",
-  "engines":{
+  "engines": {
     "node": "v14.17.5"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-mongodb-session": "^2.4.1",
+    "cool-ascii-faces": "^1.3.4",
     "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
